changing name to all english
